--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<!-- Bootsrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Gugi|IBM+Plex+Sans|Lobster" rel="stylesheet">
-		<link rel="stylesheet" href="/css/web_style.css">
+		<link rel="stylesheet" href="./css/web_style.css">
 		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 		By Jason Long (http://git-scm.com/downloads/logos) [<a href="https://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>], <a href="https://commons.wikimedia.org/wiki/File:Git-logo-black.svg">via Wikimedia Commons</a>
 		<!-- /Bootsrap CSS -->
