fixed pictures and added css elements to them

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Gugi|IBM+Plex+Sans|Lobster" rel="stylesheet">
 		<link rel="stylesheet" href="./css/web_style.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 		<link rel="JavaScript" href="./javascript/script.js">
 		By Jason Long (http://git-scm.com/downloads/logos) [<a href="https://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>], <a href="https://commons.wikimedia.org/wiki/File:Git-logo-black.svg">via Wikimedia Commons</a>
@@ -67,13 +68,13 @@
 			<h3>Social Media</h3>
 				<div class="wrapper">
 				<a href="https://www.facebook.com/josh.hahs.1">
-				<img src="./img/instantlogosearch-facebook.png" alt="" data-toggle="tooltip" data-placement="bottom" title="Link to facebook!"style="width:50;height:50px;" id="fb">
+				<i class="fab fa-facebook fa-4x" data-toggle="tooltip" data-placement="bottom" title="Link to facebook!" style="color: #3B5998" id="fb"></i> 
 				</a>
 				<a href="https://www.linkedin.com/in/joshua-hahs/">
-				<img src="./img/shgysk8zer0-logos-linkedin.png" alt="" data-toggle="tooltip" data-placement="bottom" title="Link to linkedin!" style="width:50;height:50px;" id="li">
+				<i class="fab fa-linkedin fa-4x" data-toggle="tooltip" data-placement="bottom" title="Link to linkedin!" style="color:#0077B5" id="li"></i> 
 				</a>
 				<a href="https://github.com/jHahs">
-				<img src="./img/git.svg"  alt="" data-toggle="tooltip" data-placement="bottom" title="Link to github!"style="width:50;height:50px;" id="git">
+				<i class="fab fa-github-square fa-4x" data-toggle="tooltip" data-placement="bottom" title="Link to github!" style="color:#6e5494" id="git"></i> 
 				</a>
 				</div>
 				<br>	
@@ -93,23 +94,23 @@
 
 					<div class="card-deck" style= "margin-left: 10%; margin-right: 10%;">
 					  <div class="card" style="border-width: 2px; border-color: black;">
-					    <img class="card-img-top" src="./img/javascript-seeklogo.com.svg" style="width:286;height:180px;" alt="Card image cap">
-					    <div class="card-body" style= "padding-left: 10px; padding-right: 10px; ">
+					    <i class="fab fa-js fa-10x" style="color: #f7df1e ;"></i>
+					    <div class="card-body">
 					      <h5 class="card-title">JavaScript</h5>
 					      <p class="card-text styling">JavaScript has been an awesome language to use, I have a built a pizza ordering system with it, and I am comfortable using jQuery when building webapps using JavaScript. JavaScript in my opinion is a language that every programmer should know, as it is used all across the web and I plan on building my skill further with it.</p>
 					    </div>
 					  </div>
 					  <div class="card" style="border-width: 2px; border-color: black;">
-					    <img class="card-img-top" src="./img/html5-with-wordmark-color.svg" style="width:286;height:180px;"alt="Card image cap">
+					    <i class="fab fa-html5 fa-10x" style="color: #FF0000;"></i>
 					    <div class="card-body">
 					      <h5 class="card-title">HTML 5 and CSS </h5>
 					      <p class="card-text styling">As you can see I've created this website with both HTML 5 and CSS, HTML AND CSS are both must know languages, and are the foundation of any web site. Bootstrap is also a framework I am familiar with and enjoy using. </p>
 					    </div>
 					  </div>
 					  <div class="card" style="border-width: 2px; border-color: black;">
-					    <img class="card-img-top" src="./img/git.svg" style="width:286;height:180px;" alt="Card image cap">
+					   <i class="fab fa-github fa-10x" style="color: #DA70D6;"></i>
 					    <div class="card-body">
-					      <h5 class="card-title">Git and GitHub</h5>
+					      <h5 class="card-title">Version Control</h5>
 					      <p class="card-text styling">I am sufficient in using both Git and Github. I know how to use Git bash for version control use and Github as well, as many of my projects are on Github.</p>
 					    </div>
 					  </div>
@@ -119,27 +120,19 @@
 					
 					
 						 <div class="card" style="border-width: 2px; border-color: black;">
-					    <img class="card-img-top" src="./img/microsoft-sql-server-seeklogo.com.svg" style="width:286;height:180px;" alt="Card image cap">
+					    <i class="fas fa-database fa-10x" style="color: #00BFFF ;"></i>
 					    <div class="card-body">
 					      <h5 class="card-title">SQL Server</h5>
 					      <p class="card-text styling">With SQL server I know how to create my own database, as well use entity framework inside visual studio to link a database, using codefirst.</p>
 					    </div>
 					  </div>
 					  <div class="card" style="border-width: 2px; border-color: black;">
-					    <img class="card-img-top" src="./img/C-Logo.png" style="width:286;height:180px;" alt="Card image cap">
+					   <i class="fas fa-code fa-10x" style="color: #20C20E ;"></i>
 					    <div class="card-body">
 					      <h5 class="card-title">C#</h5>
 					      <p class="card-text styling">Using C#, I know how to create Console Apps, MVC, and I am also familiar with using entity framework, as well as building ASP.NET Applications.</p>
 					    </div>
 					  </div>
-					  <div class="card" style="border-width: 2px; border-color: black;">
-					    <img class="card-img-top-vis" src="./img/Visual_Studio_2017_logo_and_wordmark (1).svg" style="width:286px;height:180px;"  alt="Card image cap">
-					    <div class="card-body">
-					      <h5 class="card-title" class="text-center">Team Foundation Server and Visual Studio</h5>
-					      <p class="card-text styling">I used Visual Studio to learn C#, and to build ASP.NET aapplications and I am currently using Team Foundation Server with a group of 3 other individuals working on a group project, so using version controls systems is my forte.</p>
-					    </div>
-					  </div>
-					</div>
 				</div>
 			</section>
 	
