--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			
 			<!-- HEADING  -->
 				<div class="background-image"></div>
-			  <div class="container-fluid">
+			  <div class="container-head">
 			 
 				<strong><h1 class="display-3 text-center my-2" id= "home">softdev(Josh_Hahs)</h1></strong>
 				<p class="lead text-center ">Hi, I'm Josh and I like to develop cool programs.</p>
