--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				JOSH HAHS SOFTWARE  
 				</a>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav mr-auto">
+					<ul class="nav navbar-nav navbar-right">
 					  <li class="nav-item">
 						<a class="nav-link" href="#aboutme">About Me</a>
 					  </li>
@@ -74,13 +74,16 @@
 			<!-- /NAVBAR -->
 			
 			<!-- HEADING  -->
-				<div class="background-image"></div>
-			  <div class="container-head">
-			 
-				<strong><h1 class="display-3 text-center my-2" id= "home">softdev(Josh_Hahs)</h1></strong>
-				<p class="lead text-center ">Hi, I'm Josh and I like to develop cool programs.</p>
-				<p class="lead text-center ">I made this site so you can get to know the technology and skills I use to make cool programs.</p>
+			<header>			 
+			 <div class="container-header">
+			 	<strong>
+			 		<div class="lead-title">
+					 	<h1 class="display-3 text-center my-2" id= "home">softdev(Josh_Hahs)</h1></strong>
+						<p class="lead text-center ">Hi, I'm Josh and I like to develop cool programs.</p>
+						<p class="lead text-center ">I made this site so you can get to know the technology and skills I use to make cool programs.</p>
+					</div>
 			  </div>
+			 </header>
 			<!-- /HEADING -->
 			
 			<!-- ABOUT ME -->
@@ -198,7 +201,7 @@
 		  		</div>
 			</div>
 			</section>
-			<div class="footer">Josh Hahs</div>
+			
 
 			
 	
