added link to repos button

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 		      			<h5 class="card-title">Blue Ribbons Review</h5>
 		     			 <p class="card-text">A Web App designed to find heavily discounted products on multiple websites. </p>
 		   			</div>
-		    			<a href="#" class="btn btn-primary">Go to Repository</a>
+		    			<a href="https://github.com/jHahs/TA-projects/tree/master/liveproject/code" class="btn btn-primary">Go to Repository</a>
 		  		</div>
 			</div>
 			</section>
