--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
 				</button>
 			
 				<a class="navbar-brand" href="#home">
-				JOSH HAHS SOFTWARE  
+				JOSH HAHS   
 				</a>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="nav navbar-nav navbar-right">
 					  <li class="nav-item">
-						<a class="nav-link" href="#aboutme">About Me</a>
+						<a class="nav-link" href="#am">About Me</a>
 					  </li>
 					  <li class="nav-item">
-						<a class="nav-link" href="#attributes">Attributes</a>
+						<a class="nav-link" href="#att">Attributes</a>
 					  </li>
 					  <li class="nav-item">
 						<a class="nav-link" href="#projects">Projects</a>
@@ -91,9 +91,9 @@
 			<div class="container text-center" style="background-color:#fff">
 			<h3 id="aboutme" >About me</h3>
 				<div class ="ab-border" style= "margin-right: 25%; margin-left: 25%; border-radius: 15px; padding-top: 10px; padding-left: 10px; padding-right: 10px; ">
-					<p class="styling text-center ">I am a software developer, currently specializing in JavaScript, C#, HTML5 and CSS3. I plan on increasing my skill set as my career progresses and learn whatever technology world would require of as a developer.</p>
+					<p class="styling text-center ">I am a software developer, currently specializing in JavaScript, C#, HTML5 and CSS3, as well as SQL. I am always increasing my skill set as my career progresses and learn whatever technology world would require of me as a developer.</p>
 					<p class="styling text-center">I may be new to the software developer scene, but I feel I am ready to take on the most daunting of tasks, and my skills should prove that. My goal is to be that "go to guy" for any situation and to make software that can be accessible to anyone, and for my software to flow smoothly as possible.</p>
-					<p class="styling text-center ">I would love to join your team and create some beautiful code.</p>
+					<p class="styling text-center ">I'm hard working, I'm excited, and I would love to join your team and create some beautiful code.</p>
 				</div>
 			<h3>Social Media</h3>
 				<div class="wrapper">
@@ -121,7 +121,6 @@
 			<!-- Attributes -->
 			<section id="att" >
 				<div class="container text-center" style="background-color:#efefef;">
-					<div id="attributes"></div>
 					<h3  class="text-center">Attributes</h3>
 
 					<div class="card-deck" style= "margin-left: 10%; margin-right: 10%;">
@@ -129,21 +128,21 @@
 					    <i class="fab fa-js fa-10x" style="color: #f7df1e ;"></i>
 					    <div class="card-body"  >
 					      <h5 class="card-title">JavaScript</h5>
-					      <p class="card-text styling">JavaScript has been an awesome language to use, I have a built a pizza ordering system with it, and I am comfortable using jQuery when building webapps using JavaScript. JavaScript in my opinion is a language that every programmer should know, as it is used all across the web and I plan on building my skill further with it.</p>
+					      <p class="card-text styling">JavaScript has been an awesome language to use, I have a built a pizza ordering system with it, and I am comfortable using jQuery when building webapps using JavaScript. JavaScript in my opinion is a language that every programmer should know, as it is used all across the web and I am building my skill further with it.</p>
 					    </div>
 					  </div>
 					  <div class="card border-0" style="background-color:#efefef; ">
 					    <i class="fab fa-html5 fa-10x" style="color: #FF0000;"></i>
 					    <div class="card-body">
 					      <h5 class="card-title">HTML 5 and CSS </h5>
-					      <p class="card-text styling">As you can see I've created this website with both HTML 5 and CSS, HTML AND CSS are both must know languages, and are the foundation of any web site. Bootstrap is also a framework I am familiar with and enjoy using. </p>
+					      <p class="card-text styling">As you can see I've created this website with both HTML 5 and CSS, HTML AND CSS are both must know languages, and are the foundation of any web site. Bootstrap is also a library I am familiar with and enjoy using.</p>
 					    </div>
 					  </div>
 					  <div class="card border-0" style="background-color:#efefef; ">
 					   <i class="fab fa-github fa-10x" style="color: #DA70D6;"></i>
 					    <div class="card-body">
 					      <h5 class="card-title">Version Control</h5>
-					      <p class="card-text styling">I am sufficient in using both Git and Github. I know how to use Git bash for version control use and Github as well, as many of my projects are on Github. I am currently using Team Foundation Server with a group of 3 other individuals working on a group project, so using version controls systems is my forte.</p>
+					      <p class="card-text styling">I am sufficient in using both Git and Github. I know how to use Git bash for version control use and Github as well, as many of my projects are on Github. Team Foundation Server with a group of 3 other individuals working on a group project, so using version controls systems is my forte.</p>
 					    </div>
 					  </div>
 					  <div class="card border-0" style="background-color:#efefef; ">
@@ -172,7 +171,7 @@
 					    <i class="fas fa-users fa-10x" style="color:#808B96"></i>
 					    <div class="card-body"  >
 					      <h5 class="card-title">Team Experience</h5>
-					      <p class="card-text styling">I come from a retail backgorund, so I have had to work with a few teams here and there. I tend to get along well with my cohorts, and a work environment with me in it, is a good environmnet. Tackling problems with a team I am more than happy to do, I consider myself to be a team player.</p>
+					      <p class="card-text styling">I come from a retail backgorund, so I have had to work with a few teams here and there. I tend to get along well with my cohorts, and a work environment with me in it, is a good environment. Tackling problems with a team I am more than happy to do, I consider myself to be a team player.</p>
 					    </div>
 					  </div>
 					  <div class="card border-0" style="background-color:#efefef; ">
@@ -201,6 +200,11 @@
 		  		</div>
 			</div>
 			</section>
+
+			
+				
+			</section>
+			<footer>Coded by Josh Hahs</footer>
 			
 
 			
