--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="nav navbar-nav navbar-right">
 					  <li class="nav-item">
-						<a class="nav-link" href="#am">About Me</a>
-					  </li>
-					  <li class="nav-item">
-						<a class="nav-link" href="#att">Attributes</a>
+						<a class="nav-link" href="#skills">Skills</a>
 					  </li>
 					  <li class="nav-item">
 						<a class="nav-link" href="#proj">Projects</a>
+					  </li>
+					  <li class="nav-item">
+						<a class="nav-link" href="#am">About Me</a>
 					  </li>
 					</ul>
 					<form class="form-inline my-2 my-lg-0 hidden-sm-down">
@@ -61,9 +61,9 @@
 			<!-- /HEADING -->
 			
 			<!-- ABOUT ME -->
-			<section id="att" >
+			<section id="skills" >
 				<div class="container text-center" style="background-color:#efefef;">
-					<h3  class="text-center">Attributes</h3>
+					<h3  class="text-center">Skills</h3>
 
 					<div class="card-deck" style= "margin-left: 10%; margin-right: 10%;">
 					  <div class="card border-0" style="background-color:#efefef; ">
@@ -129,9 +129,9 @@
 			
 			<!-- /ABOUT ME -->
 			
-			<!-- Attributes -->
+			<!-- Projects -->
 			<section id="proj">
-			<div class="container" style="background-color:#fff">
+			<div class="container" style="background-color:#fff;">
 					<h3 class="text-center">Projects</h3>
 				<div class="card" style=" margin-left: 40%; margin-right: 40%; border-width: 2px; border-color: black;">
 		   				 <img class="card-img-top" src="./img/br_logo_gold.png" alt="Card image cap">
@@ -143,9 +143,9 @@
 		  		</div>
 			</div>
 			</section>
-			<!-- /Attributes -->
+			<!-- /Projects -->
 			
-			<!-- Projects -->
+			<!-- About Me -->
 			<section id = "am"></section>
 			<div class="container text-center" style="background-color:#efefef">
 			<h3 id="aboutme" >About me</h3>
