--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 			<!-- HEADING  -->
 			<header>			 
 			 <div class="container-header">
-			 	<strong>
+			 	
 			 		<div class="lead-title">
-					 	<h1 class="display-3 text-center my-2" id= "home">softdev(Josh_Hahs)</h1></strong>
+					 	<h1 class="display-3  my-2" id= "home">softdev(Josh_Hahs)</h1>
 						<p class="lead text-center ">Hi, I'm Josh and I like to develop cool programs.</p>
 						<p class="lead text-center ">I made this site so you can get to know the technology and skills I use to make cool programs.</p>
 					</div>
@@ -214,10 +214,16 @@
 			
 	
 	
-					<!-- Bootstrap script -->
+					<!-- Bootstrap script and other script -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+		<script src="jquery.fittext.js"></script>
+		<script>
+		  $("h1").fitText();
+		</script>
+		
 		
 	</body>
 </html>
