--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 			
 			<!-- HEADING  -->
 			<header>			 
-			 <div class="container-header">
+			 <section id = "home" class="lead-title">
+			 	<div class = "container-header">
+			 		<h1 class="display-3  my-2">softdev(Josh_Hahs)</h1>
+			 		<p class="lead text-center ">Hi, I'm Josh and I like to develop cool programs.</p>
+					<p class="lead text-center ">I made this site so you can get to know the technology and skills I use to make cool programs.</p>
+			 	</div>
 			 	
-			 		<div class="lead-title">
-					 	<h1 class="display-3  my-2" id= "home">softdev(Josh_Hahs)</h1>
-						<p class="lead text-center ">Hi, I'm Josh and I like to develop cool programs.</p>
-						<p class="lead text-center ">I made this site so you can get to know the technology and skills I use to make cool programs.</p>
-					</div>
-			  </div>
+			 </section>
 			 </header>
 			<!-- /HEADING -->
 			
@@ -131,16 +131,49 @@
 			
 			<!-- Projects -->
 			<section id="proj">
-			<div class="container" style="background-color:#fff;">
+			<div class="container-proj" style="background-color:#fff; ">
 					<h3 class="text-center">Projects</h3>
-				<div class="card" style=" margin-left: 40%; margin-right: 40%; border-width: 2px; border-color: black;">
-		   				 <img class="card-img-top" src="./img/br_logo_gold.png" alt="Card image cap">
-		    		<div class="card-body">
-		      			<h5 class="card-title">Blue Ribbons Review</h5>
-		     			 <p class="card-text">A Web App designed to find heavily discounted products on multiple websites. </p>
-		   			</div>
-		    			<a href="https://github.com/jHahs/TA-projects/tree/master/liveproject/code" class="btn btn-primary">Go to Repository</a>
-		  		</div>
+				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+				  <ol class="carousel-indicators">
+				    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+				    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+				    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+				  </ol>
+				  <div class="carousel-inner">
+				    <div class="carousel-item active">
+				      <img class="d-block w-100" src="./img/br_logo_gold.png" style = "height:450px;" alt="First slide">
+				      <div class="carousel-caption d-none d-md-block">
+					    <h5>Blue Ribbons Review</h5>
+					    <p>Web app designed to find the best deals on multiple sights</p>
+					    <a href="https://github.com/jHahs/TA-projects/tree/master/liveproject/code" class="btn btn-primary">Go to Repo</a>
+					  </div>
+				    </div>
+				    <div class="carousel-item">
+				      <img class="d-block w-100" src="./img/book-stack-books-classic-158834.jpg" style = "height:450px;" alt="Second slide">
+				      <div class="carousel-caption d-none d-md-block">
+					    <h5>SQl Library</h5>
+					    <p>A database built for a faux library using SQL server</p>
+					     <a href="https://github.com/jHahs/library-db" class="btn btn-primary">Go to Repo</a>
+					  </div>
+				    </div>
+				    <div class="carousel-item">
+				      <img class="d-block w-100" src="./img/code-coding-computer-248515.jpg" style = "height:450px;" alt="Third slide">
+				      <div class="carousel-caption d-none d-md-block">
+					    <h5>Employee Log Console App</h5>
+					    <p>A console app that keeps track of when employees are employed and are logged into a database using entity framework code first</p>
+					     <a href="https://github.com/jHahs/TA-projects/tree/master/EmployeeDataBase" class="btn btn-primary">Go to Repo</a>
+					  </div>
+				    </div>
+				  </div>
+				  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+				    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				    <span class="sr-only">Previous</span>
+				  </a>
+				  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+				    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+				    <span class="sr-only">Next</span>
+				  </a>
+				</div>
 			</div>
 			</section>
 			<!-- /Projects -->
@@ -152,7 +185,7 @@
 				<div class ="ab-border" style= "margin-right: 25%; margin-left: 25%; border-radius: 15px; padding-top: 10px; padding-left: 10px; padding-right: 10px; ">
 					<p class="styling text-center ">I am a software developer, currently specializing in JavaScript, C#, HTML5 and CSS3, as well as SQL. I am always increasing my skill set as my career progresses and learn whatever technology world would require of me as a developer.</p>
 					<p class="styling text-center">I may be new to the software developer scene, but I feel I am ready to take on the most daunting of tasks, and my skills should prove that. My goal is to be that "go to guy" for any situation and to make software that can be accessible to anyone, and for my software to flow smoothly as possible.</p>
-					<p class="styling text-center ">I'm hard working, I'm excited, and I would love to join your team and create some beautiful code.</p>
+					<p class="styling text-center">I'm hard working, I'm excited, and I would love to join your team and create some beautiful code.</p>
 				</div>
 			<h3>Social Media</h3>
 				<div class="wrapper">
@@ -210,7 +243,7 @@
 	
 			
 			
-			<!-- /Portfolio -->
+			
 			
 	
 	
