small css edits and wording corrections

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			 	<div class = "container-header">
 			 		<h1 class="display-3  my-2">softdev(Josh_Hahs)</h1>
 			 		<p class="lead text-center ">Hi, I'm Josh and I like to develop cool programs.</p>
-					<p class="lead text-center ">I made this site so you can get to know the technology and skills I use to make cool programs.</p>
+					<p class="lead text-center ">I made this site so you can get to know the technology and skills I know to make cool programs.</p>
 			 	</div>
 			 	
 			 </section>
@@ -77,14 +77,14 @@
 					    <i class="fab fa-html5 fa-10x" style="color: #FF0000;"></i>
 					    <div class="card-body">
 					      <h5 class="card-title">HTML 5 and CSS </h5>
-					      <p class="card-text styling">As you can see I've created this website with both HTML 5 and CSS, HTML AND CSS are both must know languages, and are the foundation of any web site. Bootstrap is also a library I am familiar with and enjoy using.</p>
+					      <p class="card-text styling"> This website was created with both HTML 5 and CSS, HTML AND CSS are both must know languages, and are the foundation of any web site. Bootstrap is also a library I am familiar with and enjoy using.</p>
 					    </div>
 					  </div>
 					  <div class="card border-0" style="background-color:#efefef; ">
 					   <i class="fab fa-github fa-10x" style="color: #DA70D6;"></i>
 					    <div class="card-body">
 					      <h5 class="card-title">Version Control</h5>
-					      <p class="card-text styling">I am sufficient in using both Git and Github. I know how to use Git bash for version control use and Github as well, as many of my projects are on Github. Team Foundation Server with a group of 3 other individuals working on a group project, so using version controls systems is my forte.</p>
+					      <p class="card-text styling">I am sufficient in using both Git and Github. I know how to use Git bash for version control use and Github as well, as many of my projects are on Github. Team Foundation Server is also a VC I am familiar with and used with a group of 3 other individuals working on a group project, so using version controls systems is my forte.</p>
 					    </div>
 					  </div>
 					  <div class="card border-0" style="background-color:#efefef; ">
